<resources>
    <string name="app_name">footprnt</string>
    <string name="title_home">Map</string>
    <string name="title_dashboard">Discover</string>
    <string name="title_notifications">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="my_stats">MY STATS</string>
    <string name="my_posts">MY POSTS</string>
    <string name="description">Description</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="upload">Upload</string>
    <string name="title_activity_edit_post">EditPost</string>
    <string name="post_message">Posted!</string>
    <string name="take_photo">Take a Photo</string>
    <string name="camera_message">Picture was not taken!</string>
    <string name="post_incomplete">You must have title and snippet</string>
    <string name="photo_error">Invalid media type</string>
    <string name="delete_saved_post">Saved Post Deleted</string>
    <string name="delete_saved_activity">Deleted Saved Activity</string>
    <string name="saved_activity">Saved Activity</string>
    <string name="unsaved_activity">Unsaved Activity</string>
    <string name="error_query_saved_posts">Error querying saved posts</string>
    <string name="error_query_saved_activity">Error querying saved activities</string>
    <string name="error_query_posts">Error querying posts</string>
    <string name="tel">tel:</string>
    <string name="saved_post">Saved Post</string>
    <string name="unsaved_post">Unsaved Post</string>
    <string name="username_taken">Username taken</string>
    <string name="username_already_exist">Username already exists</string>
    <string name="password_must_match">Passwords must match</string>
    <string name="request_valid_email">Please enter a valid email</string>
    <string name="facebook_img_url">https://graph.facebook.com/%s/picture?type=large</string>
    <string name="user_cancel_fb_login">User cancelled the Facebook login.</string>
    <string name="error_occurred">Error occurred</string>
    <string name="emails_must_match">Emails must match</string>
    <string name="network_error_try_again">Network error, please try again later.</string>
    <string name="password_reset_check_email">Please check your password for reset instructions</string>
    <string name="upload_or_take_photo">Upload or Take a Photo</string>
    <string name="visited_cities">Visited Cities</string>
    <string name="visited_countries">Visited Countries</string>
    <string name="visited_continents">Visited Continents</string>
    <string name="unvisited">Unvisited</string>
    <string name="no_location_permission">No location permission</string>
    <string name="cities">Cities</string>
    <string name="countries">Countries</string>
    <string name="continents">Continents</string>
    <string name="profile_image">profileImg</string>
    <string name="unsplash">Unsplash</string>
    <string name="nothing_to_show">Sorry, nothing to show here!</string>
    <string name="places_been_so_far">Places You\'ve Been So Far</string>
    <string name="logout">Logout</string>
    <string name="saved_posts">Saved Posts</string>
    <string name="saved_activities">Saved Activities</string>
    <string name="blank" />
    <string name="saved">Saved</string>
    <string name="discover_no_network_message">No network connection, limited usability. Some features may not work correctly.</string>
    <string name="message_no_network">Uh oh! No network connection - some features may not work correctly.</string>
    <string name="loading_markers">Loading all posts...</string>
    <string name="reloading_markers">Reloading map markers...</string>
    <string name="message_user_stats">Look at where you\'ve traveled! Click on a place to learn more.</string>
    <string name="loading">Loading...</string>
</resources>
